# backtrade-2

./: .all-contributorsrc  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/source/: backtrade.backtest.rst  backtrade.rst  conf.py  index.md  installation.md  modules.rst  usage.md
example/: example.ipynb
src/backtrade/: __init__.py  dtypes.py  finished_order.py  logic.py  order.py  validator.py
src/backtrade/backtest/: __init__.py  backtest.py  dtypes.py
tests/: test_backtester.py  test_logic.py  test_main.py  test_validator.py
tests/backtest/: test_backtester.py
