[tool.poetry]
name = "backtrade"
version = "0.1.0"
description = "A small Python package for backtesting."
authors = ["34j <55338215+34j@users.noreply.github.com>"]
license = "GNU General Public License v3"
readme = "README.md"
repository = "https://github.com/34j/backtrade"
documentation = "https://backtrade.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "backtrade", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/34j/backtrade/issues"
"Changelog" = "https://github.com/34j/backtrade/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^22.1.0"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
exceptiongroup = "^1.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^3.0"
pre-commit = "^2.20.0"
black = "^22.10.0"
autoflake = "^2.0.0"
mypy = "^0.991"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-rtd-theme = ">=1.0"

[tool.poetry.group.example.dependencies]
yfinance = "^0.1.87"
pandas-ta = "^0.3.14b0"
ipykernel = "^6.17.1"
requests-cache = "^0.9.7"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/backtrade/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=backtrade --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.isort]
profile = "black"
known_first_party = ["backtrade", "tests"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
